src/pages/ManageEntity.scss
.app-show-entity {

  .app-controls {
    @apply flex items-center text-gray-700 overflow-x-hidden;

    a {
      @apply flex items-center whitespace-nowrap px-4 py-2 rounded text-gray-700
               bg-gray-100 shadow-sm transition-all ease-in font-semibold
               hover:bg-purple-700 hover:text-gray-50 mr-4;
    }

    .app-right {
      @apply ml-auto flex items-center;

      button {
        @apply flex items-center whitespace-nowrap ml-4 px-3 py-2 rounded text-gray-700 text-xs
               bg-gray-100 shadow-sm transition-all ease-in font-semibold
               hover:bg-purple-700 hover:text-gray-50;

        &.app-control-delete {
          @apply hover:bg-red-700 hover:text-gray-50;
        }

        svg {
          @apply mr-2 text-sm;
        }
      }
    }
  }

  form {
    .app-fields {
      @apply rounded border border-black p-4;

      .app-field {
        @apply text-gray-900;

        &:not(:first-child) {
          @apply mt-4;
        }

        label {
          @apply block text-sm mb-1 text-gray-700;
        }

        input.app-field-control, select.app-field-control {
          @apply p-2 rounded border border-gray-500
                 text-sm focus:outline-none focus:ring w-full focus:ring-purple-300
                 ease-linear transition-all duration-150;
        }

        select.app-field-control {
          appearance: none;
          background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
          background-repeat: no-repeat;
          background-position: right 0.5rem center;
          background-size: 1em;
        }

        .app-field-control:disabled {
          @apply bg-transparent pointer-events-none;
        }

        p {
          @apply mt-2 text-red-900 text-xs;
        }
      }

      .app-inventory {
        label {
          @apply block text-sm text-gray-700 font-bold;
          &::after {
            content: '▾';
            @apply ml-1;
          }

          &.app-label-total::after {
            content: '▸';
          }
        }

        .app-field {
          @apply mt-0;
          .app-field-control {
            @apply py-1;
            &[type=number] {
              @apply text-right;
            }
          }
        }

        button {
          @apply flex items-center justify-around whitespace-nowrap rounded text-gray-700 text-xs
          bg-gray-100 shadow-sm transition-all ease-in font-semibold
          hover:bg-purple-700 hover:text-gray-50 mr-2;

          svg {
            @apply text-xs;
          }
        }

        &.app-inventory-item {
          button {
            @apply p-2;
          }
        }

        &.app-inventory-end {
          button {
            @apply p-2;
            svg {
              @apply mr-2;
            }
          }
        }
      }
    }

    button.app-control-cancel {
      @apply flex items-center pl-4 pr-6 py-2 rounded bg-gray-200 text-gray-700 ml-2
             transition-all ease-in shadow-sm whitespace-nowrap hover:scale-105;
    }

    button[type=submit] {
      @apply flex items-center pl-4 pr-6 py-2 rounded bg-purple-700 text-gray-50 ml-2
             transition-all ease-in shadow-sm whitespace-nowrap hover:scale-105;

      svg {
        @apply mr-3;
      }
    }
  }

  &:not(.app-showing) {
    form .app-field-control {
      @apply bg-white;
    }
  }

  &.app-showing {
    form label span:first-child {
      @apply hidden;
    }

    form .app-field-control {
      @apply bg-transparent pointer-events-none;
    }

    form select.app-field-control {
      background-image: none !important;
    }
  }

}

